[gd_scene load_steps=6 format=3 uid="uid://bpal8b1ogmybs"]

[ext_resource type="Script" path="res://scenes/ui/Weapon Element/weapon_element.gd" id="1_ep4nd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sas3"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.407843, 0.407843, 0.407843, 1)

[sub_resource type="ImageTexture" id="ImageTexture_l1mp7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0116"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 3
border_color = Color(0.407843, 0.407843, 0.407843, 1)
expand_margin_right = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hk3r"]

[node name="WeaponElement" type="BoxContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 0
script = ExtResource("1_ep4nd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_6sas3")

[node name="H" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="Icon" type="TextureRect" parent="PanelContainer/H"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(58, 58)
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("ImageTexture_l1mp7")
expand_mode = 3
stretch_mode = 4

[node name="IconLabel" type="Label" parent="PanelContainer/H/Icon"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_a0116")
text = "BL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconColor" type="ColorRect" parent="PanelContainer/H/Icon/IconLabel"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 0, 0.431373, 0.501961)

[node name="InfoContainer" type="Control" parent="PanelContainer/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(174, 0)
layout_mode = 2
mouse_filter = 1

[node name="M" type="MarginContainer" parent="PanelContainer/H/InfoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="NameLabel" type="Label" parent="PanelContainer/H/InfoContainer/M"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Blaster"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LvlLabel" type="Label" parent="PanelContainer/H/InfoContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = -1.0
offset_bottom = 23.0
grow_horizontal = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_font_sizes/font_size = 12
text = "lvl 0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.6)
z_index = 2
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hk3r")
